# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "this is the swagger implementation for dialosoft, it is a sample docs for fiber",
+        "description": "this is the swagger implementation for dialosoft",
         "title": "Dialosoft Swagger API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
@@ -15,7 +15,7 @@
         "version": "0.2.0"
     },
     "host": "localhost:8080",
-    "basePath": "/",
+    "basePath": "/dialosoft-api/v1",
     "paths": {
         "/auth/login": {
             "post": {
@@ -49,9 +49,9 @@
                         }
                     },
                     "400": {
-                        "description": "BAD REQUEST",
+                        "description": "Credential validation failed",
                         "schema": {
-                            "$ref": "#/definitions/response.StandardError"
+                            "$ref": "#/definitions/response.ValidatorError"
                         }
                     },
                     "401": {
@@ -97,10 +97,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/response.RefreshTokenResponse"
                         }
                     },
                     "400": {
@@ -175,6 +172,281 @@
                     }
                 }
             }
+        },
+        "/categories/create-new-category": {
+            "post": {
+                "security": [
+                    {
+                        "AccessTokenAuth": []
+                    },
+                    {
+                        "RefreshTokenAuth": []
+                    }
+                ],
+                "description": "Creates a new category with a specified name.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Create new category",
+                "parameters": [
+                    {
+                        "description": "New Category Data",
+                        "name": "category",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.NewCategory"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "CREATED - Category created successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "BAD REQUEST - Invalid input data",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    },
+                    "409": {
+                        "description": "CONFLICT - Category already exists",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    },
+                    "500": {
+                        "description": "INTERNAL SERVER ERROR - Unexpected server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    }
+                }
+            }
+        },
+        "/categories/get-all-categories-allowed": {
+            "get": {
+                "description": "Retrieves a list of categories that the specified role is allowed to access, if is Authenticated can see protected categories by role",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Get allowed categories by role",
+                "responses": {
+                    "200": {
+                        "description": "List of accessible categories",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/response.CategoryResponse"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "FORBIDDEN - Invalid roleID format in token or unauthorized access",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND - No categories found for this role",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    },
+                    "500": {
+                        "description": "INTERNAL SERVER ERROR - Unexpected server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    }
+                }
+            }
+        },
+        "/categories/protected/delete-category/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "AccessTokenAuth": []
+                    },
+                    {
+                        "RefreshTokenAuth": []
+                    }
+                ],
+                "description": "Deletes an existing category from the system.",
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Delete category",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Category ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "DELETED - Category deleted successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "BAD REQUEST - Invalid category ID",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND - Category not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    },
+                    "500": {
+                        "description": "INTERNAL SERVER ERROR - Unexpected server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    }
+                }
+            }
+        },
+        "/categories/protected/restore-category/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "AccessTokenAuth": []
+                    },
+                    {
+                        "RefreshTokenAuth": []
+                    }
+                ],
+                "description": "Restores a previously deleted category.",
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Restore category",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Category ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "RESTORED - Category restored successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "BAD REQUEST - Invalid category ID",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND - Category not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    },
+                    "500": {
+                        "description": "INTERNAL SERVER ERROR - Unexpected server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    }
+                }
+            }
+        },
+        "/categories/protected/update-category/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "AccessTokenAuth": []
+                    },
+                    {
+                        "RefreshTokenAuth": []
+                    }
+                ],
+                "description": "Updates an existing category with new data.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Update category",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Category ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Updated Category Data",
+                        "name": "category",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.NewCategory"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "UPDATED - Category updated successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "BAD REQUEST - Invalid input data",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND - Category not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    },
+                    "500": {
+                        "description": "INTERNAL SERVER ERROR - Unexpected server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.StandardError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -182,10 +454,35 @@
             "type": "object",
             "properties": {
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "12345678"
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "matdevcoder"
+                }
+            }
+        },
+        "request.NewCategory": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "some description for category 2"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Category 2"
+                },
+                "rolesAllowedID": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "['8213280e-2000-403a-b375-cdcda6488450'",
+                        " 'roleUUID2']"
+                    ]
                 }
             }
         },
@@ -193,7 +490,8 @@
             "type": "object",
             "properties": {
                 "refreshToken": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                 }
             }
         },
@@ -206,17 +504,46 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "busta@email.com"
                 },
                 "password": {
                     "type": "string",
                     "maxLength": 35,
-                    "minLength": 6
+                    "minLength": 6,
+                    "example": "12345678"
                 },
                 "username": {
                     "type": "string",
                     "maxLength": 15,
-                    "minLength": 4
+                    "minLength": 4,
+                    "example": "busta"
+                }
+            }
+        },
+        "response.CategoryResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "rolesAllowed": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
@@ -224,10 +551,21 @@
             "type": "object",
             "properties": {
                 "accessToken": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                 },
                 "refreshToken": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                }
+            }
+        },
+        "response.RefreshTokenResponse": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                 }
             }
         },
@@ -235,13 +573,16 @@
             "type": "object",
             "properties": {
                 "accessToken": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                 },
                 "refreshToken": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                 },
                 "userID": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "userID"
                 }
             }
         },
@@ -249,9 +590,52 @@
             "type": "object",
             "properties": {
                 "error": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "An error occurred - some context"
                 }
             }
+        },
+        "response.StandardResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string",
+                    "example": "info message"
+                }
+            }
+        },
+        "response.ValidatorError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Validation failed"
+                },
+                "fields": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    },
+                    "example": {
+                        "{'username'": " 'Username is required'}"
+                    }
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "AccessTokenAuth": {
+            "description": "Bearer token for authentication",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        },
+        "RefreshTokenAuth": {
+            "description": "Refresh token for authentication",
+            "type": "apiKey",
+            "name": "X-Refresh-Token",
+            "in": "header"
         }
     }
 }
